# learn-rust

./: Cargo.toml  EMBED.adoc  NOTES.CHAPTER-1.adoc  README.adoc  memory.x  notes.data-types.adoc  notes.funtions.adoc  notes.ownership.adoc  notes.structs&enums.adoc  notes.variables.adoc
data-types/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: .idea
microbit/: Cargo.toml
microbit/src/: main.rs
mini-redis/: Cargo.toml
mini-redis/examples/: hello-redis.rs  set-get.rs  tasks.rs
mini-redis/src/: main.rs
snake_microbit/: Cargo.toml
snake_microbit/src/: main.rs
structs-enums/: Cargo.toml
structs-enums/src/: main.rs
variables/src/: main.rs
